# foxpost

./: .dockerignore  .editorconfig  .gitignore  .melangeignore  Cargo.toml  ContainerFile  Containerfile  README.md  Rocket.toml  apko.yaml  blog.config  build.rs  logic_comments.py  melange.yaml  nixpacks.toml  tailwind_build.sh  webmention.json  webmetion.json
.cargo/: config.toml
.github/workflows/: audit.yml  check-and-lint.yaml  release-packaging.yaml
migrations/2022-08-17-023927_auth/: up.sql
migrations/2022-08-17-023927_auth/src/: schema.rs
migrations/2022-08-27-130440_posts/: down.sql  up.sql
migrations/2022-09-04-141024_add confirmed field/: down.sql
migrations/2022-09-04-141024_add_confirmed_field/: up.sql
migrations/2022-10-30-112602_add tags/: down.sql  up.sql
migrations/2023-07-15-054442_posts add note url/: down.sql  up.sql
posts/: archlinux_secureboot_nvidia.md  posts.json
src/: config.rs  db.rs  errors.rs  main.rs  routes.rs  schema.rs
src/auth/: database.rs  forms.rs  mod.rs  routes.rs
src/image/: mod.rs  routes.rs
src/posts/: database.rs  json.rs  mod.rs  post.rs  private.rs  public.rs  routes.rs
src/tests/: mod.rs
src/webmentions/: database.rs  forms.rs  mod.rs  routes.rs
src/xml/: mod.rs
static/css/: bundle.css  font.css  style.css
static/images/: icon.avif  icon100.avif  icon35.avif  icon36.avif  icon48.avif  icon50.avif
static/js/: app.js  editor.js  highlight.min.js  search.js  theme.js  webmention.min.js
static_src/: .gitignore  .pnp.cjs  .rtx.toml  .yarnrc.yml  config.js  gulpfile.js  gulpfile.ts  package.json  rome.json  tailwind.config.js  tsconfig.json
static_src/.yarn/patches/: @types-mark.js-npm-8.11.8-18b973913e.patch  easymde-npm-2.18.0-1f9f5b619d.patch  flexsearch-npm-0.7.31-f26cb98f08.patch
static_src/scripts/: greeter.mjs  minify.js
static_src/src/: .swcrc
static_src/src/css/: bundle.css  bundle.scss  comments.scss  style.css  style.scss
static_src/src/js/: about.ts  comment.ts  editor.ts  post.ts  search.ts  theme.ts
tailwind/: .pnp.cjs  package.json  tailwind.config.js
tailwind/scripts/: minify.js
templates/: 403.html.tera  404.html.tera  500.html.tera  505.html.tera  about.html.tera  all_posts.html.tera  base-private.html.tera  base.html.tera  edit_post.html.tera  editor.html.tera  error.html.tera  footer.html.tera  image.html.tera  index.html.tera  login.html.tera  nav.html.tera  post.html.tera  robots.txt.tera  rss.xml.tera  search.html.tera  signup.html.tera  sitemap.xml.tera  tags.html.tera
