[package]
name = "blog"
version = "1.0.2"
edition = "2021"
license = "GPL-2.0-or-later"

#See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = [
"diesel_postgres_pool",
] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }

diesel = { version = "2", features = ["postgres"] }
diesel_migrations = { version = "2", features = ["postgres"] }
argon2 = "0.5.0"
serde = { version = "1.0.158", features = ["derive"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
serde_json = "1.0.94"
slug = "0.1.4"
hcaptcha = { version = "2.2.1", default-features = false, features = [
"ext",
"rustls-backend",
] }
pulldown-cmark = "0.9.2"
lazy_static = "1.4.0"
url = "2.3.1"

[profile.release]
lto = true
