[package]
name = "foxpost"
version = "1.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

#See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = [
"diesel_postgres_pool",
] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
diesel = { version = "2", features = ["postgres"] }
diesel_migrations = { version = "2", features = ["postgres"] }
argon2 = "0.5.0"
serde = { version = "1.0.171", features = ["derive"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
serde_json = "1.0.102"
slug = "0.1.4"
pulldown-cmark = { version = "0.9.3", default-features = false, features = [
"simd",
] }
url = "2.4.0"
reqwest = { version = "0.11.18", default-features = false, features = [
"rustls-tls",
"json",
] }


# with 0 opts binary size in 24MB
[profile.release]
strip = true      # with strip it goes down to 15MB
lto = true        # adding lto it goes down to 12MB
opt-level = 3     # stacking opt-level z it drops to 9.6MB
codegen-units = 1 # adding this we drop to 9.2MB
panic = "abort"   # adding panic = abort drops size to 8.5MB after writing a custom hcaptcha component it drops to 8.1M
